bk_ida/gccida/c3/k6_load_unit_blockage
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:25885:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 25623, "k6_load_unit_blockage"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:25885:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 25623, "k6_load_unit_blockage"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:26130:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = memory_operand( recog_data_0.operand[1], VOIDmode) == 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:26168:49: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = which_alternative || !memory_operand( recog_data_0.operand[1], VOIDmode); 
                                                ^~~~~~~~~~~~
                                                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:26173:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = which_alternative != 1 || !memory_operand( recog_data_0.operand[1], VOIDmode); 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:26184:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = memory_operand( recog_data_0.operand[0], VOIDmode) == 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:26192:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = constant_call_address_operand( recog_data_0.operand[0], VOIDmode) != 0; 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/insn-attrtab.c:26201:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = constant_call_address_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_blockage/src/obj/insn-attrtab.o] Error 1
